// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestPresenter creates presenter with defaults 1`] = `
Object {
  "error": null,
  "isPending": false,
  "isSucceed": false,
}
`;

exports[`RequestPresenter marks as error request 1`] = `
Object {
  "error": [Error: Boom!],
  "isPending": false,
  "isSucceed": false,
}
`;

exports[`RequestPresenter marks as succeed request 1`] = `
Object {
  "error": null,
  "isPending": false,
  "isSucceed": true,
}
`;

exports[`RequestPresenter resets to default 1`] = `
Object {
  "error": null,
  "isPending": false,
  "isSucceed": false,
}
`;

exports[`RequestPresenter starts request 1`] = `
Object {
  "error": null,
  "isPending": true,
  "isSucceed": false,
}
`;
